<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Just_Java</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">quantity</string>
    <string name="toppings">toppings</string>
    <string name="Name">Name</string>
    <string name="price">price</string>
    <string name="order">order</string>
    <string name="thank_you">Thank you!</string>
    <string name="total">Total</string>
</resources>
